--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,25 +44,36 @@
     }
 
     .dark {
-        --background: 20 14.3% 4.1%;
-        --foreground: 60 9.1% 97.8%;
-        --card: 20 14.3% 6.1%;
-        --card-foreground: 60 9.1% 97.8%;
-        --popover: 20 14.3% 4.1%;
-        --popover-foreground: 60 9.1% 97.8%;
-        --primary: 21.18 100% 50%;
-        --primary-foreground: 60 9.1% 97.8%;
-        --secondary: 12 6.5% 15.1%;
-        --secondary-foreground: 60 9.1% 97.8%;
-        --muted: 12 6.5% 12.1%;
-        --muted-foreground: 24 5.4% 63.9%;
-        --accent: 20 14.3% 9.1%;
-        --accent-foreground: 60 9.1% 97.8%;
-        --destructive: 0 72.2% 50.6%;
-        --destructive-foreground: 60 9.1% 97.8%;
-        --border: 12 6.5% 11.1%;
-        --input: 12 6.5% 15.1%;
-        --ring: 20.5 90.2% 48.2%;
+        --gradient: #fe6c00;
+
+        --background: 27 65% 4%;
+        --foreground: 27 10% 97.5%;
+
+        --muted: 27 41% 13%;
+        --muted-foreground: 27 10% 55%;
+
+        --popover: 27 44% 7.5%;
+        --popover-foreground: 27 10% 97.5%;
+
+        --card: 27 44% 7.5%;
+        --card-foreground: 27 10% 97.5%;
+
+        --border: 27 41% 13%;
+        --input: 27 41% 13%;
+
+        --primary: 27 100% 50%;
+        --primary-foreground: 27 10% 5%;
+
+        --secondary: 27 41% 13%;
+        --secondary-foreground: 27 10% 97.5%;
+
+        --accent: 27 41% 13%;
+        --accent-foreground: 27 10% 97.5%;
+
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 27 10% 97.5%;
+
+        --ring: 27 100% 50%;
     }
 }
 
@@ -104,7 +115,6 @@ body {
     width: 100%;
     height: 100%;
     content: '';
-    background: #000000d6;
     position: absolute;
     z-index: -1;
 }
